feat: add health check endpoint and update docs

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,56 @@
-DATABASE_URL=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+# =============================================================================
+# DevHub Environment Variables
+# =============================================================================
+# Copy this file to .env and fill in your values:
+#   cp .env.example .env
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Database (PostgreSQL)
+# -----------------------------------------------------------------------------
+# Connection string for PostgreSQL database.
+# 
+# Local development:
+#   DATABASE_URL=postgres://postgres:password@127.0.0.1:5432/devhub
+#
+# Neon (recommended for learning):
+#   DATABASE_URL=postgres://user:password@ep-xxx.region.aws.neon.tech/dbname?sslmode=require
+#
+# Vercel Postgres:
+#   DATABASE_URL will be auto-injected by Vercel
+#
+DATABASE_URL=
+
+# -----------------------------------------------------------------------------
+# Payload CMS
+# -----------------------------------------------------------------------------
+# Secret key for encrypting sessions and tokens.
+# MUST be at least 32 characters long.
+# Generate one with: openssl rand -base64 32
+#
+PAYLOAD_SECRET=replace-this-with-a-secure-secret-at-least-32-chars
+
+# Base URL for the server (used for generating links, CORS, etc.)
+# Local development: http://localhost:3000
+# Production: https://your-domain.vercel.app
+#
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+# -----------------------------------------------------------------------------
+# Vercel (auto-injected in production)
+# -----------------------------------------------------------------------------
+# These are automatically set by Vercel during deployment.
+# You don't need to set them manually.
+#
+# VERCEL_URL=your-app.vercel.app
+# VERCEL_ENV=production|preview|development
+
+# -----------------------------------------------------------------------------
+# Future Variables (for upcoming stories)
+# -----------------------------------------------------------------------------
+# Clerk Authentication (Story 1.4)
+# NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+# CLERK_SECRET_KEY=
+#
+# OpenAI / AI Features (Story 2.x)
+# OPENAI_API_KEY=
