--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,47 @@
 # =============================================================================
 # DevHub Environment Variables
 # =============================================================================
-# Copy this file to .env and fill in your values:
-#   cp .env.example .env
+# Copy this file to .env.local and fill in the values
+# NEVER commit .env.local to version control!
+
 # =============================================================================
+# DATABASE (Vercel Postgres / Neon)
+# =============================================================================
+# Get these from Vercel Dashboard → Storage → [Database] → .env.local tab
+# Or run: vercel env pull .env.local
 
-# -----------------------------------------------------------------------------
-# Database (PostgreSQL)
-# -----------------------------------------------------------------------------
-# Connection string for PostgreSQL database.
-# 
-# Local development:
-#   DATABASE_URL=postgres://postgres:password@127.0.0.1:5432/devhub
-#
-# Neon (recommended for learning):
-#   DATABASE_URL=postgres://user:password@ep-xxx.region.aws.neon.tech/dbname?sslmode=require
-#
-# Vercel Postgres:
-#   DATABASE_URL will be auto-injected by Vercel
-#
-DATABASE_URL=
+# Primary connection string (pooled) - used for all database queries
+DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require"
 
-# -----------------------------------------------------------------------------
-# Payload CMS
-# -----------------------------------------------------------------------------
-# Secret key for encrypting sessions and tokens.
-# MUST be at least 32 characters long.
-# Generate one with: openssl rand -base64 32
-#
-PAYLOAD_SECRET=replace-this-with-a-secure-secret-at-least-32-chars
+# Direct connection string (unpooled) - used for Prisma migrations
+# Same as DATABASE_URL but remove "-pooler" from the hostname
+DATABASE_URL_UNPOOLED="postgresql://user:password@host:5432/database?sslmode=require"
 
-# Base URL for the server (used for generating links, CORS, etc.)
-# Local development: http://localhost:3000
-# Production: https://your-domain.vercel.app
-#
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+# =============================================================================
+# PAYLOAD CMS
+# =============================================================================
+# Secret for Payload CMS session encryption (generate a random string)
+PAYLOAD_SECRET="your-payload-secret-here"
 
-# -----------------------------------------------------------------------------
-# Vercel (auto-injected in production)
-# -----------------------------------------------------------------------------
-# These are automatically set by Vercel during deployment.
-# You don't need to set them manually.
-#
-# VERCEL_URL=your-app.vercel.app
-# VERCEL_ENV=production|preview|development
+# =============================================================================
+# CLERK AUTHENTICATION
+# =============================================================================
+# Get these from Clerk Dashboard → API Keys
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_..."
+CLERK_SECRET_KEY="sk_test_..."
 
-# -----------------------------------------------------------------------------
-# Future Variables (for upcoming stories)
-# -----------------------------------------------------------------------------
-# Clerk Authentication (Story 1.4)
-# NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-# CLERK_SECRET_KEY=
-#
-# OpenAI / AI Features (Story 2.x)
-# OPENAI_API_KEY=
+# Webhook secret for Clerk webhooks (from Clerk Dashboard → Webhooks → Signing Secret)
+CLERK_WEBHOOK_SECRET="whsec_..."
+
+# Clerk redirect URLs (optional - can also be set in Clerk dashboard)
+NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
+NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/home"
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL="/home"
+
+# =============================================================================
+# VERCEL (Auto-populated when deployed)
+# =============================================================================
+# These are automatically set by Vercel during deployment
+# VERCEL_URL="..."
+# VERCEL_ENV="development|preview|production"
